# STT_1e19

./: CMakeLists.txt  README.md  main.C  p_res_p.C
nd_reco-master/: CMakeLists.txt  README.md  beamT.h  readEdep_smeared.C  smear.C  smearBeamMonitoring_SAND.C  smearECAL_3dst2.C
nd_reco-master/data/: Histograms_1pi0.root  Histograms_1pi0_complete.root  Neutron_H_Angle_qeok_smearingok_All.root  RecoVsTrue_Beta_RealCal_pdg2112_20190315_192325_ThrStt2.500000e-07.root  plotres.root
